@@ -7,6 +7,8 @@ git-annex (5.20131131) UNRELEASED; urgency=low
   * assistant: Run transferkeys as batch jobs.
   * Automatically fix up bad bare repositories created by
     versions 5.20131118 through 5.20131127.
+  * rsync special remote: Fix fallback mode for rsync remotes that
+    use hashDirMixed. Closes: #731142
 
  -- Joey Hess <joeyh@debian.org>  Sun, 01 Dec 2013 13:57:58 -0400
 
